scatterplot: Fix broken layout sizing

--- a/assets/styles/cluster.scss
+++ b/assets/styles/cluster.scss
@@ -4,7 +4,11 @@
 
   svg {
     height: 100%;
-    width: auto;
+    width: 100%;
+    height: -moz-available;          /* WebKit-based browsers will ignore this. */
+    height: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+    height: fill-available;
+    padding: 12px;
   }
 }
 
