--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -104,7 +104,7 @@ body {
   display: none;
   padding: 0px;
   border-top: none;
-  flex: 1;
+  flex: 1 1 auto;
 }
 
 .tabcontent2 {
